--- a/DataDrivenFramework/pom.xml
+++ b/DataDrivenFramework/pom.xml
@@ -117,24 +117,27 @@
 
 	<build>
 		<plugins>
+		   <plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-compiler-plugin</artifactId>
+           <version>3.6.1</version>
+           <configuration>
+           <source>1.8</source>
+           <target>1.8</target>
+           </configuration>
+   </plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>2.20</version>
 				<configuration>
 					<testFailureIgnore> false </testFailureIgnore>
 					<suiteXmlFiles>
-						<suiteXmlFile>src/test/resources/runner/testng.xml</suiteXmlFile>
-
+						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
-
-
-
-
-
-			</plugin>
+	</plugin>
 
 
 		</plugins>
